force-app/main/default/objects/SOP__c/SOP__c.object-meta.xml
<CustomObject>
    <label>SOP</label>
    <nameField>
        <displayFormat>SOP-{YYYY}-{MM}-{00000}</displayFormat>
        <label>SOP</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>