force-app/main/default/objects/SOP__c/fields/Effective_Version__c.field-meta.xml
<CustomField>
    <fullName>Effective_Version__c</fullName>
    <inlineHelpText>Version that is currently in effective and adopted.</inlineHelpText>
    <label>Effective Version</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>