force-app/main/default/objects/SOP__c/fields/Process_Instruction_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Instruction_Name__c</fullName>
    <inlineHelpText>Name of the process instruction</inlineHelpText>
    <label>Process Instruction Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>