force-app/main/default/objects/SOP__c/fields/SOP__c.field-meta.xml
<CustomField>
    <fullName>SOP__c</fullName>
    <inlineHelpText>Naming convention for the SOP. i.e. SOP-REC-2018-xxxxx</inlineHelpText>
    <label>SOP Number</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>