force-app/main/default/objects/SOP__c/fields/SOP_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>SOP_Approval_Date__c</fullName>
    <inlineHelpText>Date in which the SOP is approved and adopted as standard procedures</inlineHelpText>
    <label>SOP Approval Date</label>
    <type>DateTime</type>
</CustomField>