force-app/main/default/objects/SOP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SOP__c</columns>
    <columns>Process_Instruction_Name__c</columns>
    <columns>Department__c</columns>
    <columns>Effective_Version__c</columns>
    <columns>SOP_Approval_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>